--- a/fe/package.json
+++ b/fe/package.json
@@ -27,6 +27,7 @@
 		"chart.js": "^3",
 		"chartjs-adapter-moment": "^1.0.1",
 		"chartjs-plugin-streaming": "^2.0.0",
+		"fft.js": "^4.0.4",
 		"moment": "^2.30.1",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.2.0",
