--- a/fe/package.json
+++ b/fe/package.json
@@ -16,45 +16,28 @@
 		"url": "https://github.com/barbarbar338/sapa-project"
 	},
 	"private": true,
+	"type": "module",
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"chart.js": "^3",
+		"chart.js": "^4.4.7",
 		"chartjs-adapter-moment": "^1.0.1",
 		"chartjs-plugin-streaming": "^2.0.0",
 		"moment": "^2.30.1",
-		"react": "^18.3.1",
+		"preact": "^10.25.2",
 		"react-chartjs-2": "^5.2.0",
-		"react-dom": "^18.3.1",
-		"react-scripts": "5.0.1",
-		"socket.io-client": "^4.8.1",
-		"web-vitals": "^2.1.0"
+		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
-		"prettier": "^3.3.3",
-		"tailwindcss": "^3.4.14"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"@preact/preset-vite": "^2.9.3",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"prettier": "^3.4.2",
+		"tailwindcss": "^3.4.17",
+		"vite": "^6.0.3"
 	}
 }
