--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -24,4 +24,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rustfft = "6.2.0"
 iir_filters = "0.1.3"
+firmata-rs = "0.4.3"
+serialport = "4.6.1"
 
