--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
 		"react": "^19.0.0",
 		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^19.0.0",
+		"react-use": "^17.6.0",
 		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
