--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-name = "fe-tauri"
+name = "digital-stethoscope"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Digital Stethoscope app built for AGU SAPA capsule project."
+authors = ["Barış DEMİRCİ", "Selin Nisa AKGÖL", "Nuri İNCEÖZ"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://github.com/barbarbar338/sapa-project"
+publish = false
 
 [lib]
-# The `_lib` suffix may seem redundant but it is necessary
-# to make the lib name unique and wouldn't conflict with the bin name.
-# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "fe_tauri_lib"
+name = "digital_stethoscope_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
