--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
 		"chart.js": "^3",
 		"chartjs-adapter-moment": "^1.0.1",
 		"chartjs-plugin-streaming": "^2.0.0",
+		"jotai": "^2.11.0",
 		"moment": "^2.30.1",
 		"react": "^19.0.0",
 		"react-chartjs-2": "^5.2.0",
